# a-crawl-template

./: README.md  pyproject.toml
src/automatic_crawler/: __init__.py  main.py
src/automatic_crawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/automatic_crawler/configs/: main_config.py
src/automatic_crawler/core/: my_mariadb.py
src/automatic_crawler/sh/: run.sh
tests/: test_mymaraidb.py
